Fix scrollbar in FF

--- a/css/visualization.css
+++ b/css/visualization.css
@@ -25,13 +25,19 @@ body {
 .clear {
  clear: left; /* Отмена обтекания */
 }
-#battlelog, #scoreboard {
+#battlelog-parent {
   margin-top: 40px;
   width: 400px;
   height: 720px;
   max-height: 720px;
   float: left;
+  overflow: hidden;
+}
+#battlelog {
+  width: 100%;
+  height: 100%;
   overflow-y: scroll;
+  padding-right: 17px;
   /*color: #00b300;*/
   color: #afc6e8;
   font-weight: normal;
